# astaprint

./: .gitignore  .gitlab-ci.yml  .gitmodules  :  Cargo.toml  LICENSE  Makefile  Rocket.toml  example.env  example.service  gitlab-ci.yml  license.template  make.mk.example  openapi.yaml  openapi_admin.yaml  rustfmt.toml
.cargo/: config
backend/: Cargo.toml  Rocket.toml
backend/src/: crypto.rs  environment.rs  fairings.rs  lib.rs  main.rs  response.rs
backend/src/guards/: login.rs  mod.rs  user.rs
backend/src/routes/: journal.rs  mod.rs  printers.rs  register.rs
backend/src/routes/jobs/: helper.rs  info.rs  mod.rs  options.rs
backend/src/routes/user/: mod.rs  tokens.rs
crypto/: Cargo.toml
crypto/src/: ffi.rs  generichash.rs  pwhash.rs
dispatcher/: Cargo.toml
dispatcher/src/: lib.rs  main.rs  subprocesses.rs
dispatcher/src/pdf/: document.rs  mod.rs  pageinfo.rs
examples/: adminadd.rs  bincode.rs  clean.rs  import.rs  journalpost.rs  migrate.rs  useradd.rs
logger/: Cargo.toml
logger/src/: lib.rs
mariadb/: admin.sql  astaprint.sql  jobs.sql  journal.sql  manager.sql  printers.sql  register.sql  schema.rs  user.sql
model/: Cargo.toml
model/src/: admin.rs  journal.rs  lib.rs  ppd.rs  printer.rs  user.rs
model/src/job/: info.rs  mod.rs  options.rs
model/src/job/options/: mod.rs  pagerange.rs  update.rs
model/src/task/: dispatcher.rs  mod.rs  worker.rs
mysql/: .gitignore  Cargo.toml  admin.sql  astaprint.sql  jobs.sql  journal.sql  printers.sql  rustfmt.toml  user.sql
mysql/src/: lib.rs  schema.rs
mysql/src/admin/: delete.rs  insert.rs  mod.rs  select.rs  update.rs
mysql/src/jobs/: delete.rs  insert.rs  mod.rs  select.rs  update.rs
mysql/src/journal/: insert.rs  mod.rs  select.rs  update.rs
mysql/src/printers/: delete.rs  insert.rs  mod.rs  select.rs  update.rs
mysql/src/user/: delete.rs  insert.rs  mod.rs  select.rs  update.rs
pdf/: .gitignore  Cargo.toml
pdf/src/: document.rs  lib.rs  mod.rs  pageinfo.rs  subprocesses.rs  tmp.rs
pdf/src/process/: child.rs  mod.rs  soffice.rs
pdf/src/subprocesses/: mod.rs  soffice.rs
redis/: Cargo.toml  redis.conf  redis@.service
redis/src/: lib.rs  lock.rs  mailbox.rs  queue.rs  share.rs  store.rs
snmp/: Cargo.toml
snmp/src/: control.rs  counter.rs  info.rs  lib.rs  listener.rs  session.rs  status.rs  tool.rs
sodium/: Cargo.toml
sodium/src/: lib.rs  pwhash.rs
src/: accounting.rs  file.rs  filetype.rs  lib.rs  lock.rs  logger.rs  pagerange.rs  pool.rs  register.rs  subprocesses.rs
src/admin/: email.rs  get.rs  guard.rs  login.rs  mod.rs  post.rs  put.rs  table.rs
src/admin/admins/: add.rs  delete.rs  get.rs  http.rs  mod.rs  post.rs  put.rs  update.rs
src/admin/admins/tokens/: http.rs  mod.rs
src/admin/jobs/: http.rs  mod.rs
src/admin/journal/: http.rs  mod.rs
src/admin/printers/: http.rs  mod.rs
src/admin/tokens/: http.rs  mod.rs  table.rs
src/admin/users/: http.rs  mod.rs
src/crypto/: generichash.rs  mod.rs  pwhash.rs
src/database/: mod.rs
src/database/printer/: create.sql  drop.sql  mod.rs  representation.rs  schema.rs
src/database/user/: create.sql  drop.sql  mod.rs  representation.rs  schema.rs
src/guards/: login.rs  mod.rs  printer.rs  user.rs
src/job/: .#data.rs  data.rs  files.rs  json.rs  mod.rs
src/jobs/: data.rs  delete.rs  get.rs  http.rs  mod.rs  post.rs  response.rs  select.rs  table.rs  task.rs  tmp.rs  uid.rs
src/jobs/info/: get.rs  mod.rs  put.rs
src/jobs/options/: get.rs  mod.rs  pagerange.rs  put.rs
src/jobs/pdf/: document.rs  mod.rs  subprocesses.rs
src/jobs/queue/: data.rs  get.rs  http.rs  mod.rs  post.rs
src/journal/: credit.rs  get.rs  http.rs  lock.rs  mod.rs  post.rs  response.rs  table.rs
src/journal/digest/: mod.rs  table.rs
src/journal/tokens/: guard.rs  mod.rs  table.rs
src/manager/: mod.rs
src/pdf/: document.rs  mod.rs  pageinfo.rs
src/printers/: accounting.rs  delete.rs  get.rs  http.rs  mod.rs  post.rs  put.rs  response.rs  select.rs  status.rs  table.rs  update.rs
src/printers/queue/: delete.rs  get.rs  http.rs  mod.rs  post.rs  task.rs  timeout.rs
src/printers/snmp/: counter.rs  mod.rs  session.rs
src/snmp/: counter.rs  mod.rs  session.rs
src/user/: add.rs  card.rs  delete.rs  get.rs  guard.rs  http.rs  key.rs  login.rs  mod.rs  post.rs  put.rs  response.rs  select.rs  table.rs
src/user/http/: mod.rs  tokens.rs
src/user/tokens/: delete.rs  get.rs  http.rs  mod.rs  table.rs
taskqueue/: Cargo.toml  rustfmt.toml
taskqueue/src/: lib.rs
worker/: Cargo.toml
worker/src/: accounting.rs  lib.rs  main.rs
worker/src/snmp/: mod.rs  session.rs
