[package]
name = "astaprint"
version = "1.0.0"
authors = ["Gerrit Pape <gerrit.pape@asta.upb.de>"]

[lib]
name = "astaprint"
path = "src/lib.rs"

[dependencies]
sodium = {path = "./sodium"}
model = {path = "./model"}
redis = {path = "./redis"}
mysql = {path = "./mysql"}
pdf = {path = "./pdf"}
snmp = {path = "./snmp"}
logger = {path = "./logger"}
legacy = {path = "./legacy"}
log = {version = "0.4", features = ["std", "max_level_debug", "release_max_level_info"]}
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
bincode = "1.0"
hex = "0.3"
netsnmp-sys = "0.1"
diesel = {version = "1.3", features = ["mysql", "r2d2", "chrono", "numeric"]}
r2d2_redis = "0.8"
threadpool = "1.7"
bigdecimal = "0.0.11"
rocket = "0.4"
rocket_codegen = "0.4"
rocket_contrib = "0.4"
rocket_cors = "0.4"
maxminddb = "0.11"
base64 = "0.10"
lpr = "0.1.4"
