[package]
name = "astaprint"
version = "1.0.0"
authors = ["Gerrit Pape <gerrit.pape@asta.upb.de>"]

[lib]
name = "astaprint"
path = "src/lib.rs"

[dependencies]
sodium = {path = "./sodium"}
model = {path = "./model", package = "astaprint-model"}
redis = {path = "./redis"}
mysql = {path = "./mysql"}
pdf = {path = "./pdf"}
snmp = {path = "./snmp"}
logger = {path = "./logger"}
log = {version = "0.4", features = ["std", "max_level_debug", "release_max_level_info"]}
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
bincode = "1.2"
hex = "0.4"
diesel = {version = "1.4", features = ["mysql", "r2d2", "chrono"]}
r2d2_redis = "0.13"
threadpool = "1.7"
rocket = "0.4"
rocket_codegen = "0.4"
rocket_contrib = "0.4"
rocket_cors = "0.4"
maxminddb = "0.13"
base64 = "0.12"
lpr = "0.1"
poppler = "0.3"
lettre = "0.9"
