[package]
name = "astaprint"
version = "1.0.0"
authors = ["Gerrit Pape <gerrit.pape@asta.upb.de>"]
edition = "2018"

[lib]
name = "astaprint"
path = "src/lib.rs"

[dependencies]
sodium = {path = "./sodium", package = "astaprint-sodium"}
model = {path = "./model", package = "astaprint-model"}
redis = {path = "./redis", package = "astaprint-redis"}
mysql = {path = "./mysql", package = "astaprint-mysql"}
pdf = {path = "./pdf", package = "astaprint-pdf"}
snmp = {path = "./snmp", package = "astaprint-snmp"}
logger = {path = "./logger", package = "astaprint-logger"}
log = {version = "0.4", features = ["std", "max_level_debug", "release_max_level_info"]}
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
bincode = "1.2"
hex = "0.4"
diesel = {version = "1.4", features = ["mysql", "r2d2", "chrono"]}
r2d2_redis = "0.13"
threadpool = "1.7"
rocket = "0.4"
rocket_codegen = "0.4"
rocket_contrib = "0.4"
rocket_cors = "0.4"
maxminddb = "0.13"
base64 = "0.12"
lpr = "0.1"
poppler = "0.3"
lettre = "0.9"
