[package]
name    = "dispatcher"
version = "0.1.0"
authors = ["Gerrit Pape <gerrit.pape@asta.upb.de>"]

[dependencies]
serde_json = "*"
astaprint = {path = ".."}
log = {version = "*", features = ["max_level_debug", "release_max_level_info"]}
inotify = "*"
poppler = {git = "https://git.uni-paderborn.de/asta/poppler-rs", rev="ff2e29fa"}
threadpool = "*"
cairo-rs = { version= "0.3.0", features = ["png"]}
json-receiver = {git = "https://git.uni-paderborn.de/asta/json-receiver-rs.git"}