[package]
name = "astaprint-model"
version = "1.1.0"
authors = ["Gerrit Pape <papeg@mail.upb.de>"]
edition = "2018"

[dependencies]
log = {version = "0.4", features = ["std", "max_level_debug", "release_max_level_info"]}
diesel = {version = "1.4", features = ["mysql", "r2d2", "chrono"]}
mysql = {path = "../mysql", package = "astaprint-mysql"}
redis = {path = "../redis", package = "astaprint-redis"}
sodium = {path = "../sodium", package = "astaprint-sodium"}
snmp = {path = "../snmp", package = "astaprint-snmp"}
r2d2_redis = "0.13"
hex = "0.4"
bincode = "1.2"
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
threadpool = "1.7"
