[package]
name = "astaprint-redis"
version = "0.1.0"
authors = ["Gerrit Pape <papeg@mail.upb.de>"]
edition = "2018"

[dependencies]
log = "0.4"
hex = "0.4"
base64 = "0.12"
r2d2_redis = "0.13"
bincode = "1.2"
serde = "1.0"
threadpool = "1.7"
sodium = {path = "../sodium", package = "astaprint-sodium"}
