[package]
name = "worker"
version = "0.1.0"
authors = ["Gerrit Pape <gerrit.pape@asta.upb.de>"]

[dependencies]
astaprint = {path = ".."}
log = {version = "*", features = ["max_level_debug", "release_max_level_info"]}
inotify = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
threadpool = "*"
diesel = {version = "*", features = ["mysql", "chrono", "bigdecimal", "numeric"]}
chrono = "*"
bigdecimal = "*"
netsnmp-sys = "*"
lpr = "0.1.3"
json-receiver = {git = "https://git.uni-paderborn.de/asta/json-receiver-rs.git"}
mpsc-queue = {git = "https://git.uni-paderborn.de/asta/mpsc-queue-rs.git"}
